# hajimi-cli-sync

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  snapshot-full.txt  vite.config.ts
.github/: RELEASE.md
.github/workflows/: build.yml  release.yml  test.yml
docs/: CONTEXT.md  PROGRESS.md
src/: App.tsx  i18n.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: account.rs  auto_installer.rs  cli_sync.rs  droid_sync.rs  error.rs  extra_clients.rs  lib.rs  main.rs  openclaw_sync.rs  opencode_sync.rs  store.rs  system_check.rs  utils.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/database/dao/: backup.rs  mod.rs  providers.rs  settings.rs
src/components/: AccountLogin.tsx  CliCard.tsx  ConfigViewer.tsx  ModelSelector.tsx  ProviderPanel.tsx  SettingsPanel.tsx
src/hooks/: useAccount.ts  useCliSync.ts  useModels.ts  useProviders.ts
src/locales/: en.json  zh.json
src/styles/: index.css
